helm-tests/template-tests/gateway/gateway-http-route.yaml
# Verify that HTTPRoute resources are created when Gateway API support is enabled.

### SECTION:PARAMETERS ###
releaseName: gatewayhttproute
skipTest: false
### SECTION:VALUES ###
global:
  gateway:
    enabled: true
    addReleaseNameToHost: prepend
    defaultDomain: pingdemo.example
    parentRefs:
    - name: ping-devops-gateway
      namespace: pinghelm
      sectionName: https
pingfederate-admin:
  enabled: true
  gateway:
    hosts:
    - host: pingfederate-admin._defaultDomain_
      paths:
      - path: /
        pathType: PathPrefix
        backend:
          serviceName: https
### SECTION:EXPECTED ###
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatewayhttproute-pingfederate-admin
spec:
  parentRefs:
  - name: ping-devops-gateway
    namespace: pinghelm
    sectionName: https
  hostnames:
  - gatewayhttproute-pingfederate-admin.pingdemo.example
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: gatewayhttproute-pingfederate-admin
      port: 9999
---
### SECTION:UNEXPECTED ###
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewayhttproute-pingfederate-admin
