helm-tests/template-tests/gateway/gateway-no-ingress-fallback.yaml
# Verify that ingress hosts are not used as implicit gateway routes.

### SECTION:PARAMETERS ###
releaseName: gatewaynofallback
skipTest: false
### SECTION:VALUES ###
global:
  ingress:
    enabled: true
    addReleaseNameToHost: prepend
    defaultDomain: ingress.example
  gateway:
    enabled: true
    addReleaseNameToHost: append
    defaultDomain: gateway.example
pingfederate-admin:
  enabled: true
  ingress:
    hosts:
    - host: pf-ingress._defaultDomain_
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: https
### SECTION:EXPECTED ###
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewaynofallback-pingfederate-admin
spec:
  rules:
  - host: gatewaynofallback-pf-ingress.ingress.example
---
### SECTION:UNEXPECTED ###
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatewaynofallback-pingfederate-admin
